Fix height spacing

--- a/styles.css
+++ b/styles.css
@@ -50,17 +50,7 @@
 .container{
     background: linear-gradient(#edf6f9,#efd3d7,#ffddd2);
     width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.container2{
-    width: 100%;
-    height: 105vh;
+    height: 205vh;
     display: flex;
     align-items: center;
     justify-content: center;
